--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -1,6 +1,5 @@
 ﻿@import "variables.less";
 
-@spaceFromTop: 160px;
 @pinColor: #ebbc18;
 
 .flashcardPage {
@@ -8,7 +7,7 @@
     border-top: 1px solid rgba(0, 0, 0, 0);
 
     .header {
-        min-height: @spaceFromTop;
+        min-height: 160px;
         .displayFlex;
         .align-items(center);
         .justifyContet(space-between);
@@ -63,6 +62,28 @@
                 height: 40px;
                 display: block;
                 margin-right: 10px;
+            }
+        }
+
+        .pinned-counter {
+            .displayFlex;
+            .align-items(flex-start);
+
+            .num {
+                font-size: 32px;
+                line-height: 32px;
+            }
+
+            .icon {
+                text-align: center;
+                font-size: 12px;
+
+                md-icon {
+                    width: 30px;
+                    height: 30px;
+                    fill: @pinColor;
+                    margin-bottom: 5px;
+                }
             }
         }
     }
@@ -131,7 +152,7 @@
         h1 {
             font-size: 50px;
             font-weight: bold;
-            margin: 0 0 18px 0;
+            margin: 0;
         }
 
         .subtitle {
@@ -205,10 +226,25 @@
 
         .like-wrapper {
             position: absolute;
-            bottom: 18px;
+            bottom: 10px;
             left: 0;
             right: 0;
             margin: 0 auto;
+            color: @textColorGrey;
+
+            md-icon {
+                width: 20px;
+                height: 20px;
+                fill: @textColorGrey;
+                margin-bottom: 7px;
+                margin-right: 5px;
+            }
+        }
+
+        .like-wrapper, .like-wrapper button {
+            .displayFlex;
+            .align-items(center);
+            .justifyContet(center);
         }
     }
 
